# tutorials

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt
src/network_analysis/: .gitignore  README.md  algo_kuzu.py  algo_networkx.py  create_graph.py  docker-compose.yml  pyproject.toml
src/video_1/: .gitignore  README.md  demo.ipynb  performance_comparison.ipynb  requirements.txt  tutorial.ipynb
src/video_10/: .gitignore  README.md  create_graph.py  docker-compose.yml  generate_data.py  requirements.txt
src/video_11/: README.md  docker-compose.yml  run_in_ide.py  run_in_notebook.ipynb
src/video_12/: README.md  main.py  requirements.txt
src/video_13_marimo_1/: README.md  eda.py  pyproject.toml
src/video_14_marimo_2/: .gitignore  README.md  app.py  create_nobel_api_graph.py  demo_workflow.py  graph_rag.py  helpers.py
src/video_2/: .gitignore  README.md  docker-compose.yml  main.txt  q1.cypher  q2.cypher
src/video_3/: .gitignore  README.md  docker-compose.yml  insert_data_duckdb.py  insert_data_kuzu.py  requirements.txt
src/video_4/: README.md
src/video_5/: README.md  convert_to_parquet.py  copy_from_csv.py  copy_from_duckdb.py  copy_from_pandas.py  copy_from_parquet.py  copy_from_polars.py  copy_from_postgres.py  copy_from_sources.py  insert_data_to_pg.py  merge_copurchaser_edges.py  merge_historical_sales_properties.py  merge_recommendation_edges.py  requirements.txt  update_graph.sh
src/video_6/: .gitignore  README.md  ingest_json.py  requirements.txt
src/video_7/: README.md  build_graph.py  network_analysis.py  requirements.txt
(+76 files in other folders)
