[project]
name = "tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=35.2.0",
    "jupyterlab>=4.4.1",
    "kuzu>=0.8.0",
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
    "yfiles-jupyter-graphs>=1.10.5",
    "yfiles-jupyter-graphs-for-kuzu>=0.0.4",
]

[tool.ruff]
line-length = 100
fix = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
